update codes python
update codes python

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,97 @@ etc/2dTo3d_test/.vs/2dTo3d_test/v14/.suo
 *.rc
 *.ico
 *.res
+\[C++\]Programming Challenges/Yahtzee/Yahtzee/ReadMe.txt
+\[C++\]Programming Challenges/WheresWaldorf/WheresWaldorf/ReadMe.txt
+\[C++\]Programming Challenges/WERTYU/WERTYU/ReadMe.txt
+\[C++\]Programming Challenges/War_77/ReadMe.txt
+\[C++\]Programming Challenges/War/War/ReadMe.txt
+\[C++\]Programming Challenges/Vito'sFamily/ReadMe.txt
+\[C++\]Programming Challenges/Tug of War/ReadMe.txt
+\[C++\]Programming Challenges/Tree/순회의사코드.txt
+\[C++\]Programming Challenges/Tree/Tree/ReadMe.txt
+\[C++\]Programming Challenges/Tree's Parents Search/Tree's Parents Search/ReadMe.txt
+\[C++\]Programming Challenges/TranslateCompany/TranslateCompany/ReadMe.txt
+\[C++\]Programming Challenges/Tower of Cubes/ReadMe.txt
+\[C++\]Programming Challenges/Tower of Cubes Answer/ReadMe.txt
+\[C++\]Programming Challenges/TheStern-BrocotNumberSystem/ReadMe.txt
+\[C++\]Programming Challenges/The Trip/The Trip/ReadMe.txt
+\[C++\]Programming Challenges/The tourist Guide/ReadMe.txt
+\[C++\]Programming Challenges/The Priest Mathematician/ReadMe.txt
+\[C++\]Programming Challenges/The Archeologist's Dilemma/ReadMe.txt
+\[C++\]Programming Challenges/test/ReadMe.txt
+\[C++\]Programming Challenges/Summation of Four Prime/ReadMe.txt
+\[C++\]Programming Challenges/Steps/ReadMe.txt
+\[C++\]Programming Challenges/StacksofFlapjacks/ReadMe.txt
+\[C++\]Programming Challenges/Stack'em/Stack'em/ReadMe.txt
+\[C++\]Programming Challenges/Soccor/ReadMe.txt
+\[C++\]Programming Challenges/SmithNumbers/ReadMe.txt
+\[C++\]Programming Challenges/Slash Maze/ReadMe.txt
+\[C++\]Programming Challenges/Slash Maze/ALGORITHM.txt
+\[C++\]Programming Challenges/Shoemaker's Problem/ReadMe.txt
+\[C++\]Programming Challenges/ShellSort/ReadMe.txt
+\[C++\]Programming Challenges/ServiceCenter/ReadMe.txt
+\[C++\]Programming Challenges/Self-describing Sequence/ReadMe.txt
+\[C++\]Programming Challenges/Railroads/요약.txt
+\[C++\]Programming Challenges/Railroads/ReadMe.txt
+\[C++\]Programming Challenges/Queue/Queue/ReadMe.txt
+\[C++\]Programming Challenges/PriorityAssigning/ReadMe.txt
+\[C++\]Programming Challenges/Primary Arithmetic/ReadMe.txt
+\[C++\]Programming Challenges/Polynomial Coefficients/ReadMe.txt
+\[C++\]Programming Challenges/Poker Hands/Poker Hands/ReadMe.txt
+\[C++\]Programming Challenges/PlayingWithWheelsAnswer/ReadMe.txt
+\[C++\]Programming Challenges/Playing With Wheels/ReadMe.txt
+\[C++\]Programming Challenges/Pairsumonious Numbers/ReadMe.txt
+\[C++\]Programming Challenges/Packaging/ReadMe.txt
+\[C++\]Programming Challenges/Ones/ReadMe.txt
+\[C++\]Programming Challenges/NQueen/ReadMe.txt
+\[C++\]Programming Challenges/Necklace/ReadMe.txt
+\[C++\]Programming Challenges/Minesweeper/Minesweeper/ReadMe.txt
+\[C++\]Programming Challenges/MFCApplication1/ReadMe.txt
+\[C++\]Programming Challenges/Marbles/ReadMe.txt
+\[C++\]Programming Challenges/LongestNap/ReadMe.txt
+\[C++\]Programming Challenges/LittleBishops/ReadMe.txt
+\[C++\]Programming Challenges/ListGraph/ReadMe.txt
+\[C++\]Programming Challenges/line_queuee/ReadMe.txt
+\[C++\]Programming Challenges/line_Queue/ReadMe.txt
+\[C++\]Programming Challenges/Light,MoreLight/ReadMe.txt
+\[C++\]Programming Challenges/LCDDisplay/LCDDisplay/ReadMe.txt
+\[C++\]Programming Challenges/Jolly Jumpers/Jolly Jumpers/ReadMe.txt
+\[C++\]Programming Challenges/HowManyPiecesofLanad/ReadMe.txt
+\[C++\]Programming Challenges/HowmanyFibs/ReadMe.txt
+\[C++\]Programming Challenges/Hanoi Tower Troubles Again/ReadMe.txt
+\[C++\]Programming Challenges/Haltal/Haltal/ReadMe.txt
+\[C++\]Programming Challenges/GraphicEditor/GraphicEditor/ReadMe.txt
+\[C++\]Programming Challenges/Garden of Eden/ReadMe.txt
+\[C++\]Programming Challenges/From Dusk Till Dawn/ReadMe.txt
+\[C++\]Programming Challenges/Freckles/ReadMe.txt
+\[C++\]Programming Challenges/FireStation Answer/ReadMe.txt
+\[C++\]Programming Challenges/Fire Station/ReadMe.txt
+\[C++\]Programming Challenges/FillRedTest/obj/Debug/FillRedTest.csproj.FileListAbsolute.txt
+\[C++\]Programming Challenges/File Fragmentation/Automated Judge Script/ReadMe.txt
+\[C++\]Programming Challenges/Factovisors/ReadMe.txt
+\[C++\]Programming Challenges/Expression/ReadMe.txt
+\[C++\]Programming Challenges/Euclid Problem/ReadMe.txt
+\[C++\]Programming Challenges/Erdos Numcbers/알고리즘구성.txt
+\[C++\]Programming Challenges/Erdos Numcbers/Erdos Numcbers/ReadMe.txt
+\[C++\]Programming Challenges/EditStepLadders/ReadMe.txt
+\[C++\]Programming Challenges/Doublet/ReadMe.txt
+\[C++\]Programming Challenges/Crypt Kicket2/Crypt Kicket2/ReadMe.txt
+\[C++\]Programming Challenges/Crypt Kicker/Crypt Kicker/ReadMe.txt
+\[C++\]Programming Challenges/Counting/ReadMe.txt
+\[C++\]Programming Challenges/ContestScoreboard/ContestScoreboard/ReadMe.txt
+\[C++\]Programming Challenges/ConsoleApplication2/ReadMe.txt
+\[C++\]Programming Challenges/CommonPermutation/CommonPermutation/ReadMe.txt
+\[C++\]Programming Challenges/Color Hash/ReadMe.txt
+\[C++\]Programming Challenges/ChecktheCheck/ChecktheCheck/ReadMe.txt
+\[C++\]Programming Challenges/CDVII/ReadMe.txt
+\[C++\]Programming Challenges/Carmichael Numbers/ReadMe.txt
+\[C++\]Programming Challenges/Bridge/ReadMe.txt
+\[C++\]Programming Challenges/BinarySearchTree/BinarySearchTree/ReadMe.txt
+\[C++\]Programming Challenges/Bigger Square Please/ReadMe.txt
+\[C++\]Programming Challenges/Bicoloring/ReadMe.txt
+\[C++\]Programming Challenges/BFSandDFS/ReadMe.txt
+\[C++\]Programming Challenges/Australian Voting/Australian Voting/ReadMe.txt
+\[C++\]Programming Challenges/aba/ReadMe.txt
+\[C++\]Programming Challenges/A Multiplication Game/ReadMe.txt
+\[C++\]Programming Challenges/15-Puzzle Problem/ReadMe.txt
